tests/snapshots/core__custom_entities_are_never_expanded.snap
---
source: tests/core.rs
expression: doc.to_typed_string().unwrap()
---
<?xml version="1.0"?>
<?adf version="1.0"?>
<!DOCTYPE adf [ <!ENTITY lol "ha"> ]>
<adf>
<prospect>
<customer>
<contact>
<name>&lol;</name></contact></customer></prospect>
</adf>
