tests/snapshots/core__decodes_numeric_character_references.snap
---
source: tests/core.rs
expression: doc.to_typed_string().unwrap()
---
<?xml version="1.0"?>
<?adf version="1.0"?>
<adf>
<prospect>
<customer>
<contact>
<name>AB &amp; Co</name></contact></customer></prospect>
</adf>
