tests/snapshots/core__typed_writer_keeps_extensions_near_original_dtd_slot.snap
---
source: tests/core.rs
expression: output
---
<?xml version="1.0"?>
<?adf version="1.0"?>
<adf>
<prospect>
<vehicle>
<year>2024</year>
<partner-score>97</partner-score>
<make>Honda</make>
<model>Civic</model></vehicle>
<customer>
<contact>
<name part="full">A</name>
<email>a@example.com</email></contact></customer></prospect>
</adf>
