tests/snapshots/core__typed_writer_preserves_cdata_wrapper.snap
---
source: tests/core.rs
expression: output
---
<?xml version="1.0"?>
<?adf version="1.0"?>
<adf>
<prospect>
<customer>
<contact>
<name part="full">A</name>
<email>a@example.com</email></contact>
<comments><![CDATA[<b>hi</b>]]></comments></customer></prospect>
</adf>
